--- a/xamoom-pingeborg-ios/de.lproj/Localizable.strings
+++ b/xamoom-pingeborg-ios/de.lproj/Localizable.strings
@@ -6,6 +6,8 @@
   Copyright (c) 2015 xamoom GmbH. All rights reserved.
 */
 
+"pingeb.org" = "pingeb.org";
+
 "pingeb.org Carinthia" = "pingeb.org Kärnten";
 
 "Last update: %@" = "Letztes Update: %@";
