--- a/xamoom-pingeborg-ios/en.lproj/Localizable.strings
+++ b/xamoom-pingeborg-ios/en.lproj/Localizable.strings
@@ -6,6 +6,8 @@
   Copyright (c) 2015 xamoom GmbH. All rights reserved.
 */
 
+"pingeb.org" = "pingeb.org";
+
 "pingeb.org Carinthia" = "pingeb.org Carinthia";
 
 "Last update: %@" = "Last update: %@";
@@ -25,3 +27,4 @@
 "Nothing found!" = "Nothing found!";
 "Scan a pingeb.org sticker." = "Scan a pingeb.org sticker.";
 "OK" = "OK";
+
