Renamed CustomMapView, added Geofence Text when no location permission

--- a/xamoom-pingeborg-ios/de.lproj/Localizable.strings
+++ b/xamoom-pingeborg-ios/de.lproj/Localizable.strings
@@ -30,6 +30,7 @@
 
 /* MapkitView */
 
+"No Location" = "Kein Position gefunden";
 "Distance: %d meter" = "Entfernung: %d meter";
 "Searching ..." = "Auf der Suche ...";
 "Nothing found near you" = "Nichts in der Nähe";
