--- a/xamoom-pingeborg-ios/en.lproj/Localizable.strings
+++ b/xamoom-pingeborg-ios/en.lproj/Localizable.strings
@@ -12,6 +12,10 @@
 
 "Last update: %@" = "Last update: %@";
 
+"Map" = "Map";
+
+"About" = "About pingeb.org";
+
 /* REMenu FontSizes */
 
 "Normal Font Size" = "Normal Font Size";
