--- a/xamoom-pingeborg-ios/de.lproj/Localizable.strings
+++ b/xamoom-pingeborg-ios/de.lproj/Localizable.strings
@@ -44,6 +44,10 @@
 "open artist description" = "Hier klicken und entdecken";
 "%lu near spots found" = "%lu Spots in der Nähe";
 
+/* MapItemDetailView */
+
+"Route" = "Navigieren";
+
 /* Bluetooth AlertView */
 
 "bluetooth alert title" = "Bluetooth";
