Add do not show to bluetooth alert & Refactor alert

--- a/xamoom-pingeborg-ios/de.lproj/Localizable.strings
+++ b/xamoom-pingeborg-ios/de.lproj/Localizable.strings
@@ -50,3 +50,5 @@
 
 "bluetooth alert title" = "Bluetooth";
 "bluetooth alert message" = "Wir nutzen Bluetooth um Künstler via iBeacons zu entdecken";
+"bluetoothalert.action.ok" = "OK";
+"bluetoothalert.action.dismiss" = "Nicht mehr anzeigen";
