Add alertController to nfc error & ignore nfc error
Error 204 is the status-update for “Single Tag Read”.

--- a/xamoom-pingeborg-ios/de.lproj/Localizable.strings
+++ b/xamoom-pingeborg-ios/de.lproj/Localizable.strings
@@ -57,3 +57,8 @@
 
 "notification.beacon.title"="Musik & Literatur aus Kärnten";
 "notification.beacon.body"="Entdecke Neues in deiner pingeb.org App";
+
+/* NFC Alert */
+"nfc.alert.action.ok"="Ok";
+"nfc.alert.title"="NFC ungültig";
+"nfc.alert.text"="Dieser NFC Sticker ist leider ungültig, bitte probieren Sie einen anderen.";
